setting the authentication
